--- a/language/Russian/strings.po
+++ b/language/Russian/strings.po
@@ -1,5 +1,5 @@
 # Kodi Media Center language file
-# Addon Name: AlexELEC Configuration
+# Addon Name: @DISTRONAME@ Configuration
 # Addon id: service.alexelec.settings
 # Addon Provider: AlexELEC
 msgid ""
@@ -17,8 +17,8 @@ msgstr ""
 "Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 
 msgctxt "#600"
-msgid "AlexELEC Settings"
-msgstr "Настройки AlexELEC"
+msgid "@DISTRONAME@ Settings"
+msgstr "Настройки @DISTRONAME@"
 
 msgctxt "#601"
 msgid "Interface"
@@ -53,16 +53,16 @@ msgid "Architecture: "
 msgstr "Архитектура:"
 
 msgctxt "#609"
-msgid "AlexELEC (Embedded Linux Entertainment Center) is a minimal Linux distribution purpose built for Kodi and VDR media center. AlexELEC is designed to boot fast with an installation process simple enough for anyone to convert a bare HTPC into a fully configured media machine in under 15 minutes."
-msgstr "AlexELEC (Embedded Linux Entertainment Center) — это минималистичный дистрибутив Linux, предназначенный для развертывания медиацентра на базе Kodi и VDR. AlexELEC быстро загружается и легко настраивается, позволяя превратить «голое железо» в полностью настроенный медиацентр менее чем за 15 минут."
+msgid "@DISTRONAME@ (Embedded Linux Entertainment Center) is a minimal Linux distribution purpose built for Kodi and VDR media center. @DISTRONAME@ is designed to boot fast with an installation process simple enough for anyone to convert a bare HTPC into a fully configured media machine in under 15 minutes."
+msgstr "@DISTRONAME@ (Embedded Linux Entertainment Center) — это минималистичный дистрибутив Linux, предназначенный для развертывания медиацентра на базе Kodi и VDR. @DISTRONAME@ быстро загружается и легко настраивается, позволяя превратить «голое железо» в полностью настроенный медиацентр менее чем за 15 минут."
 
 msgctxt "#610"
 msgid "[B]Support:[/B][CR]Web: http://www.alexelec.in.ua[CR]Forum: http://forum.alexelec.in.ua"
 msgstr "[B]Поддержка:[/B][CR]Веб: http://www.alexelec.in.ua[CR]Форум: http://forum.alexelec.in.ua"
 
 msgctxt "#611"
-msgid "The AlexELEC project runs on goodwill, love, and your donations. If you would like to contribute to the project you can donate. Making a donation is easy and takes only a couple of minutes."
-msgstr "Проект AlexELEC развивается за счет доброй воли, любви и Ваших пожертвований. Если Вы хотите помочь проекту - Вы можете сделать пожертвование на сайте (www.alexelec.in.ua). Это займет у Вас всего несколько минут."
+msgid "The @DISTRONAME@ project runs on goodwill, love, and your donations. If you would like to contribute to the project you can donate. Making a donation is easy and takes only a couple of minutes."
+msgstr "Проект @DISTRONAME@ развивается за счет доброй воли, любви и Ваших пожертвований. Если Вы хотите помочь проекту - Вы можете сделать пожертвование на сайте (www.alexelec.in.ua). Это займет у Вас всего несколько минут."
 
 msgctxt "#700"
 msgid "Configure a hostname, keyboard type, perform a reset, update, or backups and restores"
@@ -89,8 +89,8 @@ msgid "Useful information like version and architecture details, support and soc
 msgstr "Полезная информация, такая как версия и архитектура системы, ссылки на службу поддержки и социальные сети, а также описание способов помощи и пожертвований проекту"
 
 msgctxt "#710"
-msgid "Configure the Hostname of your AlexELEC system. This will be used for the HTPC \\\\hostname in Windows and SMB server name in the Mac OS Finder"
-msgstr "Настройка имени хоста вашей системы AlexELEC. Под этим именем Ваш HTPC будет виден в сети Windows, как \\\\имя_хоста, а также в проводнике Mac OS, как удаленный сервер с сетевыми дисками"
+msgid "Configure the Hostname of your @DISTRONAME@ system. This will be used for the HTPC \\\\hostname in Windows and SMB server name in the Mac OS Finder"
+msgstr "Настройка имени хоста вашей системы @DISTRONAME@. Под этим именем Ваш HTPC будет виден в сети Windows, как \\\\имя_хоста, а также в проводнике Mac OS, как удаленный сервер с сетевыми дисками"
 
 msgctxt "#711"
 msgid "Configure the 1st keyboard software layout"
@@ -105,40 +105,40 @@ msgid "Configure the physical keyboard type"
 msgstr "Конфигурация физического типа клавиатуры"
 
 msgctxt "#714"
-msgid "AlexELEC can be configured for automatic or manual updates. Automatic updates are available on stable releases and stable release candidates. Automatic update self-disables on beta and development builds"
-msgstr "AlexELEC можно настроить для автоматического или ручного обновления ПО. Автоматические обновления доступны только на стабильных релизах и на кандидатах в релизы. Автоматические обновления отключены на бета-версиях и на сборках, предназначенных для разработчиков"
+msgid "@DISTRONAME@ can be configured for automatic or manual updates. Automatic updates are available on stable releases and stable release candidates. Automatic update self-disables on beta and development builds"
+msgstr "@DISTRONAME@ можно настроить для автоматического или ручного обновления ПО. Автоматические обновления доступны только на стабильных релизах и на кандидатах в релизы. Автоматические обновления отключены на бета-версиях и на сборках, предназначенных для разработчиков"
 
 msgctxt "#715"
 msgid "Set to ON and an on-screen notification will be displayed when a new update is available"
 msgstr "В положении ВКЛ на экране будут появляться уведомления о доступности нового ПО для обновления"
 
 msgctxt "#716"
-msgid "Click to manually check the AlexELEC servers for an updated release"
-msgstr "Нажмите для ручной проверки обновлений на серверах AlexELEC"
+msgid "Click to manually check the @DISTRONAME@ servers for an updated release"
+msgstr "Нажмите для ручной проверки обновлений на серверах @DISTRONAME@"
 
 msgctxt "#717"
-msgid "If you have an small LCD or VFD attached to your AlexELEC system you must configure the correct display driver"
-msgstr "Если у Вас небольшой LCD или VFD дисплей, подключенный к системе AlexELEC  - Вы должны сконфигурировать правильный драйвер дисплея"
+msgid "If you have an small LCD or VFD attached to your @DISTRONAME@ system you must configure the correct display driver"
+msgstr "Если у Вас небольшой LCD или VFD дисплей, подключенный к системе @DISTRONAME@  - Вы должны сконфигурировать правильный драйвер дисплея"
 
 msgctxt "#720"
 msgid "Set to ON and Bluetooth devices will be disabled during power-saving modes"
 msgstr "Выберите ВКЛ для автоматического отключения Bluetooth устройств при простоях для экономии энергии"
 
 msgctxt "#722"
-msgid "Create a tar archive containing all AlexELEC and Kodi configuration settings, databases and thumbnail content. Backup files will be stored in /storage/backups"
-msgstr "Создание tar-архива со всеми настройками AlexELEC и Kodi, всеми базами данных и миниатюрами. Резервные копии будут сохранены в /storage/backups"
+msgid "Create a tar archive containing all @DISTRONAME@ and Kodi configuration settings, databases and thumbnail content. Backup files will be stored in /storage/backups"
+msgstr "Создание tar-архива со всеми настройками @DISTRONAME@ и Kodi, всеми базами данных и миниатюрами. Резервные копии будут сохранены в /storage/backups"
 
 msgctxt "#723"
 msgid "Restore a tar archive backup previously created using the backup option above"
 msgstr "Восстановление резервной копии из tar-архива, созданной с помощью опции резервного копирования"
 
 msgctxt "#724"
-msgid "[COLOR FF00FF00]SOFT RESET[/COLOR]\nPermanently reset AlexELEC configuration to defaults (resets also Kodi to default including your library. your media - music/videos/etc are not touched)"
-msgstr "[COLOR FF00FF00]SOFT RESET[/COLOR]\nВосстанавливает параметры AlexELEC по умолчанию (также сбрасываются настройки Kodi, включая библиотеку; медиафайлы — музыка, видео и т.п. — остаются без изменений)"
+msgid "[COLOR FF00FF00]SOFT RESET[/COLOR]\nPermanently reset @DISTRONAME@ configuration to defaults (resets also Kodi to default including your library. your media - music/videos/etc are not touched)"
+msgstr "[COLOR FF00FF00]SOFT RESET[/COLOR]\nВосстанавливает параметры @DISTRONAME@ по умолчанию (также сбрасываются настройки Kodi, включая библиотеку; медиафайлы — музыка, видео и т.п. — остаются без изменений)"
 
 msgctxt "#725"
-msgid "[COLOR FFFF0000]HARD RESET[/COLOR]\nPermanently reset AlexELEC and Kodi configuration to defaults (everything in your storage partition will be deleted)"
-msgstr "[COLOR FFFF0000]HARD RESET[/COLOR]\nВосстанавливает параметры для умолчанию для AlexELEC и Kodi (всё содержимое раздела с вашими данными будет удалено)"
+msgid "[COLOR FFFF0000]HARD RESET[/COLOR]\nPermanently reset @DISTRONAME@ and Kodi configuration to defaults (everything in your storage partition will be deleted)"
+msgstr "[COLOR FFFF0000]HARD RESET[/COLOR]\nВосстанавливает параметры для умолчанию для @DISTRONAME@ и Kodi (всё содержимое раздела с вашими данными будет удалено)"
 
 msgctxt "#726"
 msgid "Enable or disable support for Wireless (WLAN) networks"
@@ -173,8 +173,8 @@ msgid "Configure the 3rd time (NTP) server"
 msgstr "Конфигурация 3 сервера времени (NTP)"
 
 msgctxt "#736"
-msgid "Set to ON to delay AlexELEC startup until the network is available. Use this if the OS is booting into Kodi/VDR before the network is up and central MySQL databases are accessible."
-msgstr "Выберите ВКЛ для задержки запуска AlexELEC до тех пор, пока не поднимется сеть. Используйте данную опцию в том случае, если загрузка Kodi/VDR требует доступ к внешним сетевым ресурсам."
+msgid "Set to ON to delay @DISTRONAME@ startup until the network is available. Use this if the OS is booting into Kodi/VDR before the network is up and central MySQL databases are accessible."
+msgstr "Выберите ВКЛ для задержки запуска @DISTRONAME@ до тех пор, пока не поднимется сеть. Используйте данную опцию в том случае, если загрузка Kodi/VDR требует доступ к внешним сетевым ресурсам."
 
 msgctxt "#737"
 msgid "737"
@@ -217,8 +217,8 @@ msgid "750"
 msgstr "750"
 
 msgctxt "#751"
-msgid "With OBEX filetransfer you can send files, for example movies or pictures over bluetooth to AlexELEC."
-msgstr "С помощью файловой передачи OBEX можно отправлять файлы, например фильмы или фотографии, через Bluetooth в AlexELEC."
+msgid "With OBEX filetransfer you can send files, for example movies or pictures over bluetooth to @DISTRONAME@."
+msgstr "С помощью файловой передачи OBEX можно отправлять файлы, например фильмы или фотографии, через Bluetooth в @DISTRONAME@."
 
 msgctxt "#752"
 msgid "Here you can set the folder location where OBEX file transfer should store incoming files"
@@ -433,8 +433,8 @@ msgid "Edit"
 msgstr "Изменить"
 
 msgctxt "#32180"
-msgid "Would you like to update AlexELEC now?"
-msgstr "Обновить AlexELEC сейчас?"
+msgid "Would you like to update @DISTRONAME@ now?"
+msgstr "Обновить @DISTRONAME@ сейчас?"
 
 msgctxt "#32181"
 msgid "Filename"
@@ -478,7 +478,7 @@ msgstr "Имя системы"
 
 msgctxt "#32196"
 msgid "About"
-msgstr "Об AlexELEC"
+msgstr "Об @DISTRONAME@"
 
 msgctxt "#32198"
 msgid "SSID"
@@ -529,8 +529,8 @@ msgid "Auto-Share External Drives"
 msgstr "Автоматически открывать общий доступ к внешним дискам"
 
 msgctxt "#32300"
-msgid "Welcome to AlexELEC"
-msgstr "Добро пожаловать в AlexELEC"
+msgid "Welcome to @DISTRONAME@"
+msgstr "Добро пожаловать в @DISTRONAME@"
 
 msgctxt "#32301"
 msgid "Welcome"
@@ -557,8 +557,8 @@ msgid "Sharing and Remote Access"
 msgstr "Общие ресурсы и удаленный доступ"
 
 msgctxt "#32312"
-msgid "AlexELEC also supports SSH for remote access. This is for advanced users who wish to interact with AlexELEC's underlying operating system. The default user is [COLOR blue]root[/COLOR] and the default password is [COLOR blue]mcpc[/COLOR]."
-msgstr "AlexELEC так же поддерживает SSH для удаленного доступа. Это необходимо опытным пользователям, которые хотят взаимодействовать с операционной системой AlexELEC напрямую. Пользователь по-умолчанию [COLOR blue]root[/COLOR] пароль по-умолчанию [COLOR blue]mcpc[/COLOR]."
+msgid "@DISTRONAME@ also supports SSH for remote access. This is for advanced users who wish to interact with @DISTRONAME@'s underlying operating system. The default user is [COLOR blue]root[/COLOR] and the default password is [COLOR blue]mcpc[/COLOR]."
+msgstr "@DISTRONAME@ так же поддерживает SSH для удаленного доступа. Это необходимо опытным пользователям, которые хотят взаимодействовать с операционной системой @DISTRONAME@ напрямую. Пользователь по-умолчанию [COLOR blue]root[/COLOR] пароль по-умолчанию [COLOR blue]mcpc[/COLOR]."
 
 msgctxt "#32316"
 msgid "Configure Services:"
@@ -585,8 +585,8 @@ msgid "Reset System Settings to defaults"
 msgstr "Сбросить системные настройки по-умолчанию"
 
 msgctxt "#32325"
-msgid "Reset AlexELEC to defaults"
-msgstr "Сбросить AlexELEC в настройки по-умолчанию"
+msgid "Reset @DISTRONAME@ to defaults"
+msgstr "Сбросить @DISTRONAME@ в настройки по-умолчанию"
 
 msgctxt "#32326"
 msgid "Are you sure?"
