--- a/language/Russian/strings.po
+++ b/language/Russian/strings.po
@@ -889,3 +889,143 @@ msgstr "Отключить курсор мыши"
 msgctxt "#3331"
 msgid "Disable mouse cursor.\nTo take effect, the system needs to be rebooted."
 msgstr "Отключить курсор мыши (не влияет на настройки KODI).\nДля вступления настроек в силу требуется перезагрузка системы."
+
+########## ACESTREAM #########
+
+msgctxt "#34000"
+msgid "AceStream"
+msgstr "AceStream"
+
+msgctxt "#3400"
+msgid "AceStream and AceProxy services config."
+msgstr "Настройка сервисов AceStream и AceProxy"
+
+msgctxt "#34010"
+msgid "AceStream Engine"
+msgstr "AceStream Engine"
+
+msgctxt "#34011"
+msgid "Enable"
+msgstr "Включить"
+
+msgctxt "#3411"
+msgid "Ace Stream is an innovative multimedia platform of a new generation. Ace Stream uses in its core, P2P (peer-to-peer) technology, BitTorrent protocol, which is acknowledged as the most effective protocol to transfer content."
+msgstr "Ace Stream - это инновационная мультимедийная платформа нового поколения. Ace Stream использует в основе технологию P2P (peer-to-peer), разработанную на базе протокола BitTorrent, который признан самым эффективным протоколом для передачи контента."
+
+msgctxt "#34012"
+msgid "Login:"
+msgstr "Имя пользователя:"
+
+msgctxt "#3412"
+msgid "Enter your user name to access the service AceStream (https://m.acestream.net)."
+msgstr "Введите имя пользователя для доступа к сервису AceStream (https://m.acestream.net)."
+
+msgctxt "#34013"
+msgid "Password:"
+msgstr "Пароль:"
+
+msgctxt "#3413"
+msgid "Enter the password to access the service AceStream (https://m.acestream.net)."
+msgstr "Введите пароль для доступа к сервису AceStream (https://m.acestream.net)."
+
+msgctxt "#34014"
+msgid "Live buffer (sec.)"
+msgstr "Буфер (сек.)"
+
+msgctxt "#3414"
+msgid "Live buffer is an important setting as it determines how much time (in seconds) we want to use for our streaming buffer."
+msgstr "Live buffer является важным параметром, поскольку он определяет, сколько времени (в секундах), мы хотим использовать для нашего потокового буфера."
+
+msgctxt "#34015"
+msgid "Cache type"
+msgstr "Тип кеша"
+
+msgctxt "#3415"
+msgid "Cache type: disk - store the cache on the disk, memory - store the cache in random-access memory."
+msgstr "Тип кеша: disk - хранить кеш на диске, memory - хранить кеш в оперативной памяти."
+
+msgctxt "#34016"
+msgid "Cache limit (Gb)"
+msgstr "Лимит кэша (Гб)"
+
+msgctxt "#3416"
+msgid "The disk cache limit allows use to set a maximum limit for how much space the cache can use."
+msgstr "Ограничение дискового кэша позволяет установить максимальный предел пространства, который может быть использован для кэширования."
+
+msgctxt "#34017"
+msgid "Live cache size (bytes)"
+msgstr "Размер кеша (в байтах)"
+
+msgctxt "#3417"
+msgid "Maximum size of the cache in bytes (default: 20971520 bytes (20 MB))."
+msgstr "Максимальный размер кеша оперативной памяти в байтах (по умолчанию: 20971520 байт (20 Мб))."
+
+msgctxt "#34018"
+msgid "Cache dir"
+msgstr "Каталог кеша"
+
+msgctxt "#3418"
+msgid "Select folder for cache."
+msgstr "Выберите каталог для хранения кеша."
+
+msgctxt "#34019"
+msgid "Clear cache"
+msgstr "Очищать кэш"
+
+msgctxt "#3419"
+msgid "The cache on the disk is removed before the start AceStream."
+msgstr "Кэш на диске будет удален перед стартом AceStream."
+
+msgctxt "#34020"
+msgid "Debug"
+msgstr "Отладка"
+
+msgctxt "#3420"
+msgid "Enable advanced debugging AceStream."
+msgstr "Включить расширенную отладку AceStream."
+
+msgctxt "#34021"
+msgid "Never stop"
+msgstr "Не останавливать"
+
+msgctxt "#3421"
+msgid "Do not stop the service when the KODI is closed."
+msgstr "Не останавливать сервис при завершении KODI."
+
+########## ACEPROXY #########
+
+msgctxt "#34030"
+msgid "AceProxy Server"
+msgstr "AceProxy сервер"
+
+msgctxt "#34031"
+msgid "Enable"
+msgstr "Включить"
+
+msgctxt "#3431"
+msgid "AceProxy allows you to watch Ace Stream live streams or BitTorrent files over HTTP."
+msgstr "AceProxy позволяет просматривать AceStream трансляции или файлы BitTorrent через HTTP."
+
+msgctxt "#34032"
+msgid "Login:"
+msgstr "Имя пользователя:"
+
+msgctxt "#3432"
+msgid "Enter your user name to access the service Torrent-TV (http://torrent-tv.ru)."
+msgstr "Введите имя пользователя для доступа к сервису Торрент-ТВ (http://torrent-tv.ru)."
+
+msgctxt "#34033"
+msgid "Password:"
+msgstr "Пароль:"
+
+msgctxt "#3433"
+msgid "Enter the password to access the service Torrent-TV (http://torrent-tv.ru)."
+msgstr "Введите пароль для доступа к сервису Торрент-ТВ (http://torrent-tv.ru)."
+
+msgctxt "#34034"
+msgid "Debug level"
+msgstr "Уровень отладки"
+
+msgctxt "#3434"
+msgid "Select from the list of log level AceProxy."
+msgstr "Выберите из списка уровень ведения журнала AceProxy."
